[gd_scene load_steps=21 format=3 uid="uid://44pumqm1otrx"]

[ext_resource type="Texture2D" uid="uid://blgd5sbvd3rv3" path="res://art/gui/FreeGUI/Button_x8.png" id="1_vhol0"]
[ext_resource type="Script" path="res://Content/UserInterface/game_ui.gd" id="1_vjmls"]
[ext_resource type="Texture2D" uid="uid://wm4f7o8xmxa3" path="res://art/gui/FreeGUI/Button_pressed_x8.png" id="2_pl6m7"]
[ext_resource type="Texture2D" uid="uid://cgcut4b84w45a" path="res://art/gui/menu/MixMatch - Background Gameplay.png" id="2_s4usy"]
[ext_resource type="Shader" path="res://art/shaders/VaporWave.gdshader" id="3_fetvp"]
[ext_resource type="Texture2D" uid="uid://bhmffmcpulflf" path="res://art/gui/FreeGUI/Button_hover_x8.png" id="3_jhhtc"]
[ext_resource type="FontFile" uid="uid://cq58k7wkj7k25" path="res://art/fonts/brandy_brunch/BradBunR.ttf" id="5_xvdsi"]
[ext_resource type="PackedScene" uid="uid://byng8h7i0e7ow" path="res://Content/UserInterface/ButtonClickSfx.tscn" id="6_fshnm"]

[sub_resource type="Gradient" id="Gradient_u3dap"]
colors = PackedColorArray(0, 0.0875, 0.25, 1, 0.73568, 0.0304, 0.76, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kxiap"]
gradient = SubResource("Gradient_u3dap")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x5w4h"]
shader = ExtResource("3_fetvp")
shader_parameter/brightness = 1.0
shader_parameter/anchor = -0.5
shader_parameter/speed_scale = 0.5
shader_parameter/fov = 0.15
shader_parameter/line_count = 1.5
shader_parameter/background_color = Color(0.00784314, 0, 0.101961, 1)
shader_parameter/grid_color = Color(0.741176, 0.141176, 0.741176, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlgyj"]
atlas = ExtResource("1_vhol0")
region = Rect2(1072, 2640, 310, 310)

[sub_resource type="AtlasTexture" id="AtlasTexture_y04qg"]
atlas = ExtResource("2_pl6m7")
region = Rect2(1072, 2640, 310, 310)

[sub_resource type="AtlasTexture" id="AtlasTexture_xame0"]
atlas = ExtResource("3_jhhtc")
region = Rect2(1072, 2640, 310, 310)

[sub_resource type="Animation" id="Animation_tfweb"]
resource_name = "newmove"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%MovesLeftLabel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(64, 75), Vector2(64, 75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%MovesLeftLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.25),
"transitions": PackedFloat32Array(2, 0, 0.5, 1),
"update": 0,
"values": [Vector2(267, 2), Vector2(267, -35), Vector2(267, 35), Vector2(267, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%MovesLeftLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vu28w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%MovesLeftLabel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%MovesLeftLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(267, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%MovesLeftLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p82g3"]
_data = {
"RESET": SubResource("Animation_vu28w"),
"newmove": SubResource("Animation_tfweb")
}

[sub_resource type="Animation" id="Animation_aic8n"]
resource_name = "newscore"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_g8n87"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6opg2"]
_data = {
"RESET": SubResource("Animation_g8n87"),
"newscore": SubResource("Animation_aic8n")
}

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_vjmls")

[node name="Background" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="sky" type="TextureRect" parent="Background"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
texture = SubResource("GradientTexture2D_kxiap")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/sky"]
modulate = Color(1, 1, 1, 0.156863)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="b" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b2" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b3" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b4" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b5" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b6" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b7" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b8" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b9" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b10" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b11" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b12" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b13" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b14" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b15" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b16" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b17" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b18" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b19" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b20" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b21" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b22" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b23" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b24" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b25" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b26" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b27" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b28" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b29" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b30" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="b31" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="b32" type="ColorRect" parent="Background/sky/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="VaporWave" type="ColorRect" parent="Background"]
material = SubResource("ShaderMaterial_x5w4h")
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_s4usy")

[node name="Darken" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.509804)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 1

[node name="PauseButton" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 1
offset_left = 71.0
offset_top = 511.0
offset_right = 151.0
offset_bottom = 590.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
texture_normal = SubResource("AtlasTexture_dlgyj")
texture_pressed = SubResource("AtlasTexture_y04qg")
texture_hover = SubResource("AtlasTexture_xame0")
ignore_texture_size = true
stretch_mode = 4

[node name="ButtonClickSfx" parent="MarginContainer/Control/PauseButton" instance=ExtResource("6_fshnm")]

[node name="MovesLeft" type="Control" parent="MarginContainer/Control"]
layout_mode = 1
anchor_left = 0.685
anchor_top = 0.086
anchor_right = 0.685
anchor_bottom = 0.086
offset_left = -786.4
offset_top = -10.2
offset_right = -434.4
offset_bottom = 68.8
grow_horizontal = 0
pivot_offset = Vector2(352, 79)

[node name="Label" type="Label" parent="MarginContainer/Control/MovesLeft"]
layout_mode = 2
offset_top = 2.0
offset_right = 263.0
offset_bottom = 77.0
theme_override_fonts/font = ExtResource("5_xvdsi")
theme_override_font_sizes/font_size = 60
text = "Moves left: "

[node name="MovesLeftLabel" type="Label" parent="MarginContainer/Control/MovesLeft"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 267.0
offset_top = 2.0
offset_right = 331.0
offset_bottom = 77.0
theme_override_fonts/font = ExtResource("5_xvdsi")
theme_override_font_sizes/font_size = 60
text = "XX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/Control/MovesLeft"]
libraries = {
"": SubResource("AnimationLibrary_p82g3")
}

[node name="Score" type="HBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.869
anchor_top = 0.854
anchor_right = 0.869
anchor_bottom = 0.87
offset_left = -173.56
offset_top = -547.8
offset_right = 65.4399
offset_bottom = -484.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(0, 75)

[node name="Label" type="Label" parent="MarginContainer/Control/Score"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_xvdsi")
theme_override_font_sizes/font_size = 60
text = "Score: "

[node name="ScoreLabel" type="Label" parent="MarginContainer/Control/Score"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "00"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/Control/Score"]
libraries = {
"": SubResource("AnimationLibrary_6opg2")
}

[connection signal="pressed" from="MarginContainer/Control/PauseButton" to="." method="_on_pause_button_pressed"]
